# heroes_api

./: .env  .envexample  .gitignore  README.MD  heros_api_report.docx  pyproject.toml  pytest.ini  requirements.txt  ~$ros_api_report.docx
app/: config.py  db.py  db_sync.py  dependencies.py  main.py  security.py
app/models/: heroes.py  missions.py  user_roles.py  users.py
app/repositories/: heroes_repo.py  missions_repo.py  users_repo.py
app/schemas/: heroes.py  missions.py  users.py
app/services/: auth.py  heroes_service.py  missions_service.py  users_service.py
app/web/: gradio_landing.py
app/web/routes/: heroes.py  missions.py  users.py
frontend/: index.html  package.json  standalone.html
frontend/src/: App.tsx  api.ts  styles.css  types.ts
gradio_app/: __init__.py  api_client.py  app.py  roles.py
migrations/: env.py  script.py.mako
migrations/versions/: 20260510_0001_initial_schema.py
scripts/: flush.db.py
tests/: conftest.py  test_admin_can_delete_mission.py  test_api.py  test_create_hero_requires_authentication.py  test_create_hero_with_token.py  test_create_mission_for_missing_hero_returns_404.py  test_gradio_roles.py  test_login_returns_token.py  test_normal_user_cannot_delete_hero.py  test_register_user.py  test_role_access_api.py  test_update_hero_partial.py  test_update_mission_partial.py  test_users_admin_api.py
