[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heroes-api"
version = "0.1.0"
description = "FastAPI heroes, missions, and users API with a React admin frontend."
readme = "README.MD"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.17.2",
  "asyncpg==0.31.0",
  "bcrypt==4.0.1",
  "email-validator==2.3.0",
  "fastapi==0.136.0",
  "passlib==1.7.4",
  "psycopg2==2.9.12",
  "pydantic==2.13.2",
  "python-dotenv==1.2.2",
  "python-jose==3.5.0",
  "python-multipart==0.0.26",
  "SQLAlchemy==2.0.49",
  "sqlmodel==0.0.38",
  "uvicorn==0.44.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
  "pytest-asyncio",
]

[project.scripts]
heroes-api = "main:app"

[tool.heroes_api]
fastapi_app = "main:app"
fastapi_main = "app/main.py"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["app"]
